<resources>
    <string name="app_name">Aspirus Health Care</string>

    <string name="btn_phAddToCart">Add To Cart</string>
    <string name="btn_phQA">Questions And Answers</string>
    <string name="btn_phEditDelete">Edit or Delete Product</string>
    <string name="btn_phApplyChanges">Apply Changes</string>
    <string name="btn_phDelete">Delete</string>
    <string name="btn_phAddProduct">Add Product</string>
    <string name="et_phProductDescription">Product Description</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="et_phImgUrl">ImageUrl</string>
    <string name="spscreen">ASPIRUS HEALTH CARE</string>
    <string name="JMAT">JMAT Technology</string>
    <string name="FROM">from</string>


    <string name="btn_signin">Sign In</string>
    <string name="label_patientLogin">Patient Login</string>
    <string name="tv_tagline">All your health needs at one place</string>
    <string name="tv_loginwith">or Login with</string>
    <string name="tv_signupwith">or Sign Up with</string>
    <string name="tv_gender">Gender</string>
    <string name="dob">Date of birth</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="nic">NIC</string>
    <string name="slmc">SLMC Registration no.</string>
    <string name="address">Address</string>
    <string name="password">Password</string>
    <string name="confirmPW">Confirm Password</string>
    <string name="cardname">Name on Card</string>
    <string name="accountno">Account Number</string>
    <string name="branch">Branch</string>
    <string name="bank">Bank Name</string>
    <string name="speciality">Speciality</string>
    <string name="work">Current Working Place</string>
    <string name="charge">Charge per consult</string>
    <string name="signup">Sign Up</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="btn_next">Next</string>

    <string name="tv_available">Available Times</string>
    <string name="upload_profilePic">Upload Profile Picture</string>
    <string name="btn_done">Done</string>

    <string name="et_Search">Search</string>
    <string name="btn_Checkout">Checkout</string>
    <string name="tv_total">Total</string>
    <string name="btn_addNewAddress">Add new Address</string>
    <string name="btn_Save">Save</string>
    <string name="btn_Confirm">Confirm</string>

    <string name="btn_channel">Channel</string>
    <string name="tv_topdoc">Top Doctors</string>
    <string name="tv_covid">Covid-19 Statistics</string>
    <string name="tv_covid_recover">Recovered</string>
    <string name="btn_add">Add</string>
    <string name="tv_sort">Sort by</string>
    <string name="btn_download">Download</string>
    <string name="btn_startConf">Start Conference</string>
    <string name="tv_patient_detail">Patient Details</string>
    <string name="tv_prescription_detail">Prescription Details</string>
    <string name="btn_view">View</string>
    <string name="tv_highlight1">Highlight</string>
    <string name="tv_doctorname">Doctor Name</string>
    <string name="tv_heading_channeling">Channeling</string>

    <string name="et_forgotpw">Forgot Password?</string>
    <string name="tv_loginsignup">Don\'t have an account? Sign Up</string>
    <string name="tv_loginpatientdoc">Are you a doctor? Login Here </string>
    <string name="label_doctorLogin">Doctor Login</string>
    <string name="tv_logindocpatient">Are you a patient? Login Here</string>
    <string name="pressure">Blood Pressure</string>
    <string name="sugar">Sugar Level</string>
    <string name="heading_profile">My Profile</string>
    <string name="bloodGroup">Blood Group</string>
    <string name="bloodPressure">Blood Pressure</string>
    <string name="age">Age - </string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="bmi">BMI</string>
    <string name="logout">Logout</string>
    <string name="label_monthlyearning">Earned This Month</string>
    <string name="label_totalearnings">Total Earnings</string>
    <string name="et_search">Search</string>
    <string name="et_appointmentDate">Date</string>
    <string name="et_appointmentTime">Time</string>
    <string name="btn_appointmmentChannel">Channel</string>
    <string name="tv_heading_addPrescription">Add Prescription</string>
    <string name="et_doctorName">Doctor Name</string>
    <string name="btn_appointmmentUpdate">Update</string>
    <string name="tv_signupLogin">Already have an account? Sign In</string>
    <string name="logo">Logo</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="doctor">Doctor</string>
    <string name="bmi_card_label">Body Mass Index</string>
    <string name="label_underweight">Underweight</string>
    <string name="label_Normal">Normal</string>
    <string name="label_overweight">Overweight</string>
    <string name="skip">Skip</string>
    <string name="letsgo">Lets\'s Go</string>
    <string name="signup_profilepic_heading">Let\'s set a Profile Picture</string>
    <string name="lkr">LKR</string>
    <string name="label_gallery">Open Gallery</string>
    <string name="label_camera">Open Camera</string>
    <string name="label_close">Close</string>
    <string name="BloodPressure_SI">mm/Hg</string>
    <string name="sugarLevel_SI">mg/dL</string>
    <string name="height_SI">m</string>
    <string name="weight_SI">kg</string>
    <string name="update_profile">Update Profile</string>
    <string name="cancel">Cancel</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="password_reset">Reset Password</string>
    <string name="update_details">Update Details</string>
    <string name="update">Update</string>
    <string name="appointments">Appointments</string>
    <string name="btnSort">sort</string>
    <string name="recent_appointments">Recent Appointments</string>
    <string name="viewall">view all</string>
    <string name="select_payment">Select Payment Method</string>
    <string name="card_number">Card Number</string>
    <string name="add_new_card">Add New Card</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="add_new_address">Add new Address</string>
    <string name="no">No</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="postal_code">Postal code</string>
    <string name="order_confirmation">Order Confirmation</string>
    <string name="cash_on_deliver">Cash on deliver</string>
    <string name="total_price">Total Price</string>
    <string name="total">Total</string>
    <string name="select_address">Select Address</string>
    <string name="defalt">Defalt</string>
    <string name="user">User details</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product price</string>
    <string name="quantity">Quantity:</string>
    <string name="qty_number">1</string>
    <string name="deaths">Deaths</string>
    <string name="total_death">Total Deaths</string>
    <string name="label_cases">Cases</string>
    <string name="in_hospitals">In Hospitals</string>
    <string name="total_cases">Total Cases</string>
    <string name="RS">Rs.</string>
    <string name="_0">0</string>
    <string name="admin_login">Pharmacist Login</string>
    <string name="adminpagedoc">Are you a doctor? Login Here</string>
    <string name="add_new_product">Add New Product</string>
    <string name="add_product">Add Product</string>
    <string name="buy_now">Buy Now</string>
    <string name="patientprofile">Patient Profile</string>
    <string name="video_message">Please share this code with your patient to start channeling video call.</string>
    <string name="hint_secretcode">Secret Code</string>
    <string name="video_join">Join</string>
    <string name="video_share">Share</string>

</resources>
