<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DoctorLogin">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="163.25dp"
        android:layout_height="160.98dp"
        android:layout_marginTop="67dp"
        android:contentDescription="Logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <ImageView
        android:id="@+id/stars"
        android:layout_width="327dp"
        android:layout_height="502dp"
        android:layout_marginTop="147dp"
        android:contentDescription="star"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_dots" />

    <EditText
        android:id="@+id/et_loginUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:width="@dimen/et_width"
        android:height="@dimen/et_height"
        android:background="@drawable/edittext"
        android:drawableEnd="@drawable/ic_baseline_person_24"
        android:elevation="10dp"
        android:ems="10"
        android:hint="@string/et_loginUsername"
        android:inputType="textPersonName|textEmailAddress"
        android:minHeight="48dp"
        android:paddingLeft="@dimen/et_padding_lr"
        android:paddingRight="@dimen/et_padding_lr"
        android:textColorHint="@color/et_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tagline"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:width="@dimen/et_width"
        android:height="@dimen/et_height"
        android:background="@drawable/edittext"
        android:drawableEnd="@drawable/ic_baseline_visibility_24"
        android:elevation="10dp"
        android:ems="10"
        android:hint="@string/et_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingLeft="@dimen/et_padding_lr"
        android:paddingRight="@dimen/et_padding_lr"
        android:textColorHint="@color/et_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_loginUsername"
        tools:ignore="MissingConstraints,TextContrastCheck" />

    <TextView
        android:id="@+id/label_patientLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/label_doctorLogin"
        android:textColor="@color/blue"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/tv_tagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/tv_tagline"
        android:textColor="@color/blue"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_patientLabel"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:width="@dimen/btn_sign_width"
        android:height="@dimen/btn_sign_height"
        android:background="@drawable/btn_sign"
        android:drawableEnd="@drawable/ic_baseline_navigate_next_24"
        android:text="@string/btn_signin"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tv_forgotpw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:minHeight="48dp"
        android:text="@string/et_forgotpw"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <TextView
        android:id="@+id/tv_forgotpw2"
        android:layout_width="198dp"
        android:layout_height="48dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:minHeight="48dp"
        android:text="@string/tv_loginsignup"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/tv_forgotpw3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_forgotpw3"
        android:layout_width="184dp"
        android:layout_height="48dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:minHeight="48dp"
        android:text="@string/tv_loginpatientdoc"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>